# inshot-agent

./: .gitignore  README.md
backend/: README.md  agents_functions.py  animations.json  director copy.py  director.py  effects.json  final_plan.json  inshot_tools.py  music.json  plan_music.json  pyproject.toml  redis_state.py  requirements.txt  server.py  test_ui_state.json  transitions.json
inshot_agent_client/: package-lock.json  package.json
inshot_agent_client/app/: globals.css  layout.tsx  page.tsx
inshot_agent_client/app/batch-queue/: page.tsx
inshot_agent_client/app/settings/: page.tsx
inshot_agent_client/components/: AgentWorkflow.tsx  ImageGallery.tsx  PhaseIndicator.tsx  Sidebar.tsx  Terminal.tsx  Toaster.tsx  VideoPreview.tsx
inshot_agent_client/components/editing/: ExecutionLog.tsx  ExecutionStatus.tsx  ImageStatusGrid.tsx
inshot_agent_client/components/planning/: DirectorThoughts.tsx  MusicCandidates.tsx  PlanningProgress.tsx  SelectedMusic.tsx  TokenUsage.tsx  VisualPlanTimeline.tsx
inshot_agent_client/components/ui/: Button.tsx  Input.tsx  Select.tsx
inshot_agent_client/types/: agent.ts
