[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "google-genai>=1.59.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "redis>=7.1.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "yt-dlp>=2026.1.31",
]
